Alignbox fix for 0.0.2
Forgot to commit this line... nothing to see here, move along sir!

--- a/scss/struct/_alignbox.scss
+++ b/scss/struct/_alignbox.scss
@@ -15,6 +15,7 @@ $alignbox-box-name: module('box') !default;
 	@include flex-flow(row nowrap);
 
 	position: relative;
+	width: 100%; // To stop other flex elements from messing with it
 
 	@if $h-align == left
 	{
